# ArmchairF1Enjoyer

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
.claude/skills/engine-purity-enforcement/: SKILL.md
.claude/skills/pipeline-conventions/: SKILL.md
docs/: PLAN.md  anti-patterns.md  backtest-log.md  brief.md  physics-model.md
models/tracks/2025/: bahrain.json
pipeline/: pyproject.toml  requirements.txt
pipeline/scripts/: build_track.py
pipeline/src/: backtest.py  backtest_sanity.py  clean.py  export.py  fetch.py  fit.py
pipeline/tests/: test_clean.py  test_fetch.py  test_fit.py
pipeline/tests/fixtures/: bahrain-2025-laps.parquet  bahrain-2025-meta.json
scripts/: verify.sh
tasks/: phase-0-bahrain.md
web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/models/tracks/2025/: bahrain.json
web/src/: App.css  App.tsx  index.css
web/src/components/: DriverSelectPage.tsx  HomePage.tsx  MfdPage.tsx  ResultPage.tsx  SetupPage.tsx  SimulatePage.tsx  WhatIfPage.tsx
web/src/components/mfd/: DriverList.tsx  EventBar.tsx  GapChart.tsx  HudBar.tsx  PitConsole.tsx  RadioLog.tsx  TrackSvg.tsx
web/src/engine/: ai.ts  events.ts  lapTime.ts  rng.ts  simulate.test.ts  simulate.ts  teamColors.ts  types.ts
web/src/i18n/: index.ts  zh.ts
web/src/store/: raceStore.ts
web/src/utils/: buildDrivers.ts  shareUrl.ts
