[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "armchair-pitwall-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
